<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ikos_vendor</name>
  <version>0.0.0</version>
  <description>Vendor package for ikos</description>
  <maintainer email="jncfa@pm.me">Jose Faria</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>libgmp</depend>
  <depend>llvm</depend>
  <depend>clang</depend>
  <depend>python3-venv</depend>
  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
